--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,8 @@
 		<activity android:name="com.playboost.android.PlayBoostSupportActivity" />	
 		
 		<activity android:name="com.playboost.android.PlayBoostOfferDetailActivity" />	
+	
+		<activity android:name="com.playboost.android.PlayBoostCompleteOfferActivity" />	
 	</application>
 	<uses-sdk
 		android:minSdkVersion="4" />
